# DARE

./: LICENSE  README.md  build_pybind_modules.sh  reg_demo.py
data/vps_out/: vps_out1.txt  vps_out2.txt  vps_out3.txt  vps_out4.txt
src/: color_feature_extraction.py  data_loader.py  observation_weights.py  point_cloud_plotting.py  psreg.py  resampling.py  shape_feature_extraction.py
src/math_utils/: CMakeLists.txt  math_utils.cpp
src/pcl_utils/: CMakeLists.txt  pcl_utils.cpp
src/pcl_utils/cmake/: FindEigen.cmake
